--- a/source/_posts/22092202.md
+++ b/source/_posts/22092202.md
@@ -1,1 +1,195 @@
+---
+title: Vue中extend,extends,minxin,minxins的用法和区别
+excerpt: 如题目
+categories:
+- 技术文章
+tags:
+- vue
+---
+
+## 前言
+初学vue。extend，extends，minxin，minxins一直没怎么了解清楚，经过大量的查阅后，总结出以下几点，有什么错误的话请大佬指正。
+
+## Vue.extend
+Vue.extend是一个全局的API，实际是创建一个构造器，并将其挂载到HTML的元素上(创建一个template标签)。可以通过propsData传参。
+```html
+<h1>Vue.extend</h1>
+<hr>
+<div id="element">
+  <h1>Hello!</h1>
+</div>
+<hr>
+<author></author>
+<hr>
+<div id="transmit"></div>
+```
+
+注意：被挂载的元素内的内容会被覆盖
+
+```javascript
+var Profile1 = Vue.extend({
+  template: '<p>My name is {{Name}}</p>',
+  data: function () {
+    return {
+      Name: 'ElucidatorSky'
+    }
+  }
+})
+
+// 输出 Profile1 实例，在控制台输出为VueComponent{}
+console.log(new Profile1());
+
+// 创建 Profile1 实例，并挂载到一个元素上。
+new Profile1().$mount('#element')
+
+var Profile2 = Vue.extend({
+  template:"<p>{{Name}}</p>",
+  data:function(){
+    return{
+      Name:'ElucidatorSky'
+    }
+  }
+});   
+// 创建 Profile2 实例，并挂载到一个元素上。
+new Profile2().$mount('author');
+
+var Profile3 = Vue.extend({
+  template: '<p>{{extendData}}</br>实例传入的数据为:{{propsExtend}}</p>',
+  data: function () {
+    return {
+      extendData: '这是extend扩展的数据',
+    }
+  },
+  props:['propsExtend']
+})
+
+// 创建 Profile 实例，并挂载到一个元素上。可以通过propsData传参.
+new Profile3({propsData:{propsExtend:'我是实例传入的数据'}}).$mount('#transmit')
+```
+
+运行后
+
+![](https://api2.mubu.com/v3/document_image/b5e876a6-e03d-4916-9ba2-f50b7fdfebef-3807603.jpg)
+
+## 为什么使用 extend
+在 vue 项目中，我们有了初始化的根实例后，所有页面基本上都是通过 router 来管理，组件也是通过 import 来进行局部注册，所以组件的创建我们不需要去关注，相比 extend 要更省心一些。但是这样做会有几个缺点：
+
+组件模板都是事先定义好的，如果我要从接口动态渲染组件怎么办？ 所有内容都是在 #app下渲染，注册组件都是在当前位置渲染。如果我要实现一个类似于 window.alert()提示组件要求像调用 JS 函数一样调用它，该怎么办？ 这时候，Vue.extend + vm.$mount 组合就派上用场了。
+
+## extends
+extends是一个选项，主要是为了便于扩展单文件组件。只不过接收的参数是简单的选项对象或构造函数,所以extends只能单次扩展一个组件
+```javascript
+// extends示例
+var CompA = { 
+  created:function(){
+    console.log("我是被扩展出来的");
+  }
+}
+extends: CompA
+```
+
+控制台输出
+
+![](https://api2.mubu.com/v3/document_image/8c854d44-395c-483b-a722-f1ccfc481b2f-3807603.jpg)
+
+## Vue.mixin和minxins
+Vue.mixin即是混入。mixin的作用是多个组件可以共享数据和方法，在使用mixin的组件中引入后，mixin中的方法和属性也就并入到该组件中，可以直接使用，在已有的组件数据和方法进行了扩充。Vue.mixin()可以把你创建的自定义方法混入所有的 Vue 实例（就是所有添加的组件都会混入你自定义的方法）。
+
+```javascript
+// mixins示例        
+//全局混入
+Vue.mixin({
+  created:function(){
+    console.log('我是全局被混入的');
+  }
+})
+var mixin = {
+  created: function () { console.log('我是外部被混入的') }
+}
+var app = new Vue({
+// 局部混入
+  mixins: [mixin]
+})
+```
+
+## mixins的特点:方法和参数在各组件中不共享
+混合对象中的参数num
+```javascript
+export default {
+  data() {
+    return {
+      num: 1,
+    }
+  },
+  created() {
+    this.hello();
+  },
+  methods: {
+    hello() {
+      console.log('hello form mixinIn')
+    }
+  }
+}
+```
+
+组件1中的参数num进行+1操作
+```html
+<template>
+  <div class="template1">
+      <p><button @click="addone">组件1</button></p>
+      template1里的num:{{num}}
+  </div>
+</template>
+
+<script>
+import mixinIn from '../assets/mixinIn'
+export default {
+    mixins: [mixinIn],
+    methods:{
+        addone(){
+            this.num++
+        }
+    }
+}
+</script>
+```
+
+组件2中参数进行+2操作
+```html
+<template>
+  <div class="template1">
+      <p><button @click="addtwo">组件2</button></p>
+      template2里的num:{{num}}
+  </div>
+</template>
+
+<script>
+import mixin from '../assets/mixinIn'
+export default {
+    mixins: [mixin],
+    methods:{
+        addtwo(){
+            this.num+=2
+        }
+    }
+}
+</script>
+```
+组件1,组件2里的num互不受影响
+
+![](https://api2.mubu.com/v3/document_image/72834eb3-789b-47a5-95cc-dac2d762d934-3807603.jpg)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
