--- a/source/_posts/22092202.md
+++ b/source/_posts/22092202.md
@@ -179,10 +179,88 @@ export default {
 
 ![](https://api2.mubu.com/v3/document_image/72834eb3-789b-47a5-95cc-dac2d762d934-3807603.jpg)
 
+mixin和extends都可以在外部创建js文件，通过import来引用
+```javascript
+//全局引用mixin
+import mixin1 from './mixin1'
+import Vue_extend from './Vue_extend'
+var Profile1 = Vue.extend(Vue_extend)
+new Profile1().$mount('#app')
+Vue.mixin(mixin1)
+//局部引用mixin
+import mixin2 from './mixin2'; // 引入mixin文件
+import extend from './extend'; // 引入mixin文件
+export default {
+   mixins: [mixin2],
+   extend: extend
+}
+```
 
+## 他们之间的区别
+```javascript
+import Vue from 'vue'
+import mixin1 from './assets/mixin1'
+import mixin2 from './assets/mixin2'
+import Vue_extend from './assets/Vue_extend'
+import extend from './assets/extend'
+var Profile1 = Vue.extend(Vue_extend)
+Vue.mixin(mixin1) // 先混入
+new Profile1().$mount('#app')  // 再挂载 先挂载则全局混入不进去
+export default {
+  name: 'App',
+  mixins:[mixin2],
+  extends: extend,
+  created() {
+      console.log("我是原生app的")
+  }
+}
+// mixin1.js
+export default {
+    created() {
+        console.log('我是全局混入的mixin1')
+    }
+}
 
+// mixin2.js
+export default {
+    created() {
+        console.log('我是局部混入的mixin2')
+    }
+}
 
+// extend.js
+export default {
+    created() {
+        console.log('我是局部扩展的')
+    }
+}
 
+// Vue_extends.js
+export default {
+    created() {
+        console.log('我是全局扩展的')
+    }
+}
+
+```
+
+结果
+
+![](https://api2.mubu.com/v3/document_image/52b2aef1-06ba-49c7-8279-fc03475e7e69-3807603.jpg)
+
+我们可以看出，全局的mixin1混入了挂载的Vue_extend和扩展的extend上
+- 先调用混入挂载上的mixin1：“我是全局混入的mixin1”
+- 然后输出挂载的Vue_extend：“我是全局扩展的”
+- 之后输出混入到原生app上的mixin1： “我是全局混入的mixin1”
+- 再输出混入到extend里的mixin1： “我是全局混入的mixin1”
+- 然后输出extend扩展的：“我是局部扩展的”
+- 再输出局部混入的mixin2：“我是局部混入的mixin2”
+- 最后输出原生app的：“我是原生的app”
+
+由此可见
+1. extend会被Vue.mixin混入
+2. 若组件被混入，混入的先执行
+3. 执行顺序：Vue.extends > 原生app混入的Vue.mixin > extends > mixins > 原生app
 
 
 
