--- a/source/_posts/22092202.md
+++ b/source/_posts/22092202.md
@@ -263,7 +263,8 @@ export default {
 3. 执行顺序：Vue.extends > 原生app混入的Vue.mixin > extends > mixins > 原生app
 
 
-
+## 参考链接
+[Vue中extend,extends,minxin,minxins的用法和区别](https://juejin.cn/post/6844903983954264071)
 
 
 
