--- a/source/_posts/22092308.md
+++ b/source/_posts/22092308.md
@@ -1,4 +1,11 @@
-如何证明存在 1000 个连续的正整数中恰好有五个素数？
+---
+title: 如何证明存在 1000 个连续的正整数中恰好有五个素数？
+excerpt: 如题目
+categories:
+- 技术文章
+tags:
+- 数学
+---
 
 ## 内容
 下面认为1是合数。因为“合数”比“非素数”好听多了。
