--- a/source/_posts/22092610.md
+++ b/source/_posts/22092610.md
@@ -1,9 +1,94 @@
 ---
-title: 斐波那契js的四种实现方法
+title: 探索parseInt() 的神秘行为：parseInt(0.0000005) =＞ 5
 excerpt: 如题目
 categories:
 - 技术文章
 tags:
 - js
-- 算法
 ---
+
+## 前言
+parseInt() 是 JavaScript 的内置函数，用于解析数字字符串中的整数。例如，从数字字符串中解析整数’100’：
+```javascript
+const number = parseInt('100');
+number; // 100
+```
+
+如预期的那样，‘100’ 将被解析为 100。
+
+parseInt(numericalString, radix) 还接受第二个参数 radix，radix 是2-36之间的整数，表示被解析字符串的基数，最常见的是2、8、10 和 16，默认为 10，也就是十进制。
+
+让我们使用parseInt()解析基数2中的数字字符串：
+```javascript
+const number = parseInt('100', 2);
+number; // 4
+```
+
+parseInt(‘100’, 2) 解析’ 100’ 为以 2 为基数的整数：因此，它返回值4（十进制）。
+
+## parseInt（）的神秘行为
+parseInt(numericalString) 的第一个参数如果不是字符串，将执行 ToString 操作注1将其转换为字符串，然后再将该字符串解析为整数值。
+```javascript
+parseInt(0.5);      // => 0
+parseInt(0.05);     // => 0
+parseInt(0.005);    // => 0
+parseInt(0.0005);   // => 0
+parseInt(0.00005);  // => 0
+parseInt(0.000005); // => 0
+```
+
+提取 float 之类的整数部分，例如 0.5，0.05 结果为0，这将按照我们预期的工作。
+
+但提取 0.0000005 的整数部分呢？
+```javascript
+parseInt(0.0000005); // => 5
+```
+
+parseInt() 将 float 解析 0.0000005 为… 5，有趣而又让人意外，那么为什么 parseInt(0.0000005) 会有这样的神秘行为？
+
+## 探索parseInt（）的奥秘
+让我们再次看一下 parseInt(numericalString) 第一个参数的作用：如果它不是字符串，则将其转换为字符串，然后进行解析，并返回解析后的整数。
+
+这可能是第一个线索。
+
+然后让我们尝试将浮点数手动转换为字符串表示形式：
+```javascript
+String(0.5);      // => '0.5'
+String(0.05);     // => '0.05'
+String(0.005);    // => '0.05'
+String(0.0005);   // => '0.005' 
+String(0.00005);  // => '0.00005'
+String(0.000005); // => '0.000005'
+String(0.0000005); // => ‘5e-7’
+```
+
+显式转换为字符串的String(0.0000005)行为与其他浮点数不同：它是指数表示法的字符串表示形式！
+
+第二个线索，当采用指数表示法解析为整数时，您将得到数字5：
+```javascript
+parseInt(0.0000005); // => 5
+// 类似于
+parseInt(5e-7);      // => 5
+// 类似于
+parseInt('5e-7');    // => 5
+```
+parseInt(‘5e-7’)考虑到第一个数字’5’，但跳过’e-7’。
+
+谜团已揭开！因为parseInt()总是将其第一个参数转换为字符串，所以小于10 -6的浮点数将以指数表示法编写。然后parseInt()从float的指数表示法中提取整数！
+
+附带说明一下，为了安全地提取浮点数的整数部分，建议使用以下Math.floor()函数：
+```javascript
+Math.floor(0.5);      // => 0
+Math.floor(0.05);     // => 0
+Math.floor(0.005);    // => 0
+Math.floor(0.0005);   // => 0
+Math.floor(0.00005);  // => 0
+Math.floor(0.000005); // => 0
+Math.floor(0.0000005); // => 0
+```
+
+## 结论
+parseInt() 是将数字字符串解析为整数的函数，尝试提取浮点数的整数部分时必须小心使用 parseInt()，防止出现意想不到的结果。
+
+## 参考链接
+[探索parseInt() 的神秘行为：parseInt(0.0000005) =＞ 5](https://blog.csdn.net/qq_30071415/article/details/117127187)
