--- a/source/_posts/22092613.md
+++ b/source/_posts/22092613.md
@@ -1,5 +1,5 @@
 ---
-title: vuedraggable在腾讯会议、企业微信会出现的问题
+title: vuex存储和本地存储(localstorage、sessionstorage)的区别
 excerpt: 如题目
 categories:
 - 技术文章
@@ -7,3 +7,45 @@ tags:
 - js
 - vue
 ---
+
+## sessionStorage
+sessionStorage 方法针对一个 session 进行数据存储。当用户关闭浏览器窗口后，数据会被删除。
+用法：
+- 存：
+  - sessionStorage.lastname = ‘JSAnntQ’;
+  - sessionStorage[‘lastname’] = ‘JSAnntQ’;
+  - sessionStorage.setItem(“lastname”, “JSAnntQ”);
+- 取：
+  - sessionStorage.lastname
+  - sessionStorage[‘lastname’]
+  - sessionStorage.getItem(“lastname”);
+
+## localStorage
+localStorage 方法存储的数据没有时间限制。第二天、第二周或下一年之后，数据依然可用。
+用法：
+- 存：
+  - localStorage.lastname = ‘JSAnntQ’;
+  - localStorage[‘lastname’] = ‘JSAnntQ’;
+  - localStorage.setItem(“lastname”, “JSAnntQ”);
+- 取：
+  - localStorage.lastname
+  - localStorage[‘lastname’]
+  - localStorage.getItem(“lastname”);
+
+## vuex
+Vuex 是一个专为 Vue.js 应用程序开发的状态管理模式。它采用集中式存储管理应用的所有组件的状态，并以相应的规则保证状态以一种可预测的方式发生变化。
+
+## 总结
+1. 区别：vuex存储在内存，localstorage（本地存储）则以文件的方式存储在本地，永久保存；sessionstorage（会话存储），临时保存。localStorage和sessionStorage只能存储字符串类型，对于复杂的对象可以使用ECMAScript提供的JSON对象的stringify和parse来处理。
+2. 应用场景：vuex用于组件之间的传值，localstorage，sessionstorage则主要用于不同页面之间的传值。
+3. 永久性：当刷新页面（这里的刷新页面指的是F5刷新，属于清除内存了）时vuex存储的值会丢失，sessionstorage页面关闭后就清除掉了，localstorage不会。
+
+注：很多同学觉得用localstorage可以代替vuex, 对于不变的数据确实可以，但是当两个组件共用一个数据源（对象或数组）时，如果其中一个组件改变了该数据源，希望另一个组件响应该变化时，localstorage，sessionstorage无法做到，原因就是区别1。
+
+## 参考链接
+[vuex存储和本地存储(localstorage、sessionstorage)的区别](https://www.cnblogs.com/jsanntq/p/9288144.html)
+
+
+
+
+
