--- a/source/_posts/22092618.md
+++ b/source/_posts/22092618.md
@@ -1,9 +1,150 @@
 ---
-title: 斐波那契js的四种实现方法
+title: 观察者模式与发布/订阅模式区别
 excerpt: 如题目
 categories:
 - 技术文章
 tags:
 - js
-- 算法
+- vue
 ---
+
+在翻阅资料的时候，有人把观察者（Observer）模式等同于发布（Publish）/订阅（Subscribe）模式，也有人认为这两种模式还是存在差异，而我认为确实是存在差异的，本质上的区别是调度的地方不同。
+
+## 观察者模式
+比较概念的解释是，目标和观察者是基类，目标提供维护观察者的一系列方法，观察者提供更新接口。具体观察者和具体目标继承各自的基类，然后具体观察者把自己注册到具体目标里，在具体目标发生变化时候，调度观察者的更新方法。
+
+比如有个“天气中心”的具体目标A，专门监听天气变化，而有个显示天气的界面的观察者B，B就把自己注册到A里，当A触发天气变化，就调度B的更新方法，并带上自己的上下文。
+
+![](https://api2.mubu.com/v3/document_image/ca61a7e5-c587-4574-8fc1-c65c35af55fc-3807603.jpg)
+
+## 发布/订阅模式
+比较概念的解释是，订阅者把自己想订阅的事件注册到调度中心，当该事件触发时候，发布者发布该事件到调度中心（顺带上下文），由调度中心统一调度订阅者注册到调度中心的处理代码。
+
+比如有个界面是实时显示天气，它就订阅天气事件（注册到调度中心，包括处理程序），当天气变化时（定时获取数据），就作为发布者发布天气信息到调度中心，调度中心就调度订阅者的天气处理程序。
+
+![](https://api2.mubu.com/v3/document_image/dfe62664-96ea-442e-95f5-104e75679dfd-3807603.jpg)
+
+## 总结
+从两张图片可以看到，最大的区别是调度的地方。
+
+虽然两种模式都存在订阅者和发布者（具体观察者可认为是订阅者、具体目标可认为是发布者），但是观察者模式是由具体目标调度的，而发布/订阅模式是统一由调度中心调的，所以观察者模式的订阅者与发布者之间是存在依赖的，而发布/订阅模式则不会。
+
+两种模式都可以用于松散耦合，改进代码管理和潜在的复用。
+
+## 附录
+观察者模式实现代码（JavaScript版）：
+```javascript
+//观察者列表
+function ObserverList(){
+  this.observerList = [];
+}
+ObserverList.prototype.add = function( obj ){
+  return this.observerList.push( obj );
+};
+ObserverList.prototype.count = function(){
+  return this.observerList.length;
+};
+ObserverList.prototype.get = function( index ){
+  if( index > -1 && index < this.observerList.length ){
+    return this.observerList[ index ];
+  }
+};
+ObserverList.prototype.indexOf = function( obj, startIndex ){
+  var i = startIndex;
+  while( i < this.observerList.length ){
+    if( this.observerList[i] === obj ){
+      return i;
+    }
+    i++;
+  }
+  return -1;
+};
+ObserverList.prototype.removeAt = function( index ){
+  this.observerList.splice( index, 1 );
+};
+
+//目标
+function Subject(){
+  this.observers = new ObserverList();
+}
+Subject.prototype.addObserver = function( observer ){
+  this.observers.add( observer );
+};
+Subject.prototype.removeObserver = function( observer ){
+  this.observers.removeAt( this.observers.indexOf( observer, 0 ) );
+};
+Subject.prototype.notify = function( context ){
+  var observerCount = this.observers.count();
+  for(var i=0; i < observerCount; i++){
+    this.observers.get(i).update( context );
+  }
+};
+
+//观察者
+function Observer(){
+  this.update = function(){
+    // ...
+  };
+}
+```
+
+发布/订阅模式实现代码（JavaScript经典版）：
+```javascript
+var pubsub = {};
+(function(myObject) {
+    // Storage for topics that can be broadcast
+    // or listened to
+    var topics = {};
+    // An topic identifier
+    var subUid = -1;
+    // Publish or broadcast events of interest
+    // with a specific topic name and arguments
+    // such as the data to pass along
+    myObject.publish = function( topic, args ) {
+        if ( !topics[topic] ) {
+            return false;
+        }
+        var subscribers = topics[topic],
+            len = subscribers ? subscribers.length : 0;
+        while (len--) {
+            subscribers[len].func( topic, args );
+        }
+        return this;
+    };
+    // Subscribe to events of interest
+    // with a specific topic name and a
+    // callback function, to be executed
+    // when the topic/event is observed
+    myObject.subscribe = function( topic, func ) {
+        if (!topics[topic]) {
+            topics[topic] = [];
+        }
+        var token = ( ++subUid ).toString();
+        topics[topic].push({
+            token: token,
+            func: func
+        });
+        return token;
+    };
+    // Unsubscribe from a specific
+    // topic, based on a tokenized reference
+    // to the subscription
+    myObject.unsubscribe = function( token ) {
+        for ( var m in topics ) {
+            if ( topics[m] ) {
+                for ( var i = 0, j = topics[m].length; i < j; i++ ) {
+                    if ( topics[m][i].token === token ) {
+                        topics[m].splice( i, 1 );
+                        return token;
+                    }
+                }
+            }
+        }
+        return this;
+    };
+}( pubsub ));
+```
+
+## 参考链接
+[设计模式（三）：观察者模式与发布/订阅模式区别](https://www.cnblogs.com/lovesong/p/5272752.html)
+
