--- a/source/_posts/22092619.md
+++ b/source/_posts/22092619.md
@@ -1,9 +1,82 @@
 ---
-title: 斐波那契js的四种实现方法
+title: HTML 请求方法
 excerpt: 如题目
 categories:
 - 技术文章
 tags:
-- js
-- 算法
+- 网络原理
 ---
+
+## 什么是 HTTP？
+超文本传输协议（Hypertext Transfer Protocol，缩写 HTTP）旨在启用客户端和服务器之间的通信。
+
+HTTP 充当客户端和服务器之间的请求-响应协议。
+
+举例：客户端（浏览器）向服务器发送 HTTP 请求；然后服务器将响应返回客户端。响应包含有关请求的状态信息，也可能包含所请求的内容。
+
+## HTTP 方法
+- GET
+- POST
+- PUT
+- HEAD
+- DELETE
+- PATCH
+- OPTIONS
+
+最常用的两种方法是：GET 和 POST。
+
+## GET 方法
+GET 用于从指定资源请求数据。
+
+GET 是最常见的 HTTP 方法之一。
+
+请注意，查询字符串（名称/值对）是在 GET 请求的 URL 中发送的：
+```
+/test/demo_form.php?name1=value1&name2=value2
+```
+有关 GET 请求的其他一些注释：
+- GET 请求可被缓存
+- GET 请求保留在浏览器历史记录中
+- GET 请求可被收藏为书签
+- GET 请求不应在处理敏感数据时使用
+- GET 请求有长度限制
+- GET 请求只应当用于取回数据（不修改）
+
+## POST 方法
+POST 用于将数据发送到服务器来创建/更新资源。
+
+通过 POST 发送到服务器的数据存储在 HTTP 请求的请求主体中：
+```
+POST /test/demo_form.php HTTP/1.1
+Host: w3school.com.cn
+name1=value1&name2=value2
+```
+
+POST 是最常见的 HTTP 方法之一。
+
+有关 POST 请求的其他一些注释：
+- POST 请求不会被缓存
+- POST 请求不会保留在浏览器历史记录中
+- POST 不能被收藏为书签
+- POST 请求对数据长度没有要求
+
+## PUT 方法
+PUT 用于将数据发送到服务器来创建/更新资源。
+
+POST 和 PUT之间的区别在于 PUT 请求是幂等的（idempotent）。也就是说，多次调用相同的 PUT 请求将始终产生相同的结果。相反，重复调用POST请求具有多次创建相同资源的副作用。
+
+## HEAD 方法
+HEAD 与 GET 几乎相同，但没有响应主体。
+
+换句话说，如果 GET /users 返回用户列表，那么 HEAD /users 将发出相同的请求，但不会返回用户列表。
+
+HEAD 请求对于在实际发出 GET 请求之前（例如在下载大文件或响应正文之前）检查 GET 请求将返回的内容很有用。
+
+## DELETE 方法
+DELETE 方法删除指定的资源。
+
+## OPTIONS 方法
+OPTIONS 方法描述目标资源的通信选项。
+
+## 参考链接
+[HTML 请求方法](https://www.w3school.com.cn/tags/html_ref_httpmethods.asp)
